Update the slides

--- a/cours6/index.html
+++ b/cours6/index.html
@@ -143,21 +143,7 @@ plot(elevation, densite[,1], axes = FALSE,
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Warning in file(file, &quot;rt&quot;): cannot open file &#39;donnees/arbres.csv&#39;: No such
-## file or directory
-</code></pre>
-
-<pre><code>## Error in file(file, &quot;rt&quot;): cannot open the connection
-</code></pre>
-
-<pre><code>## Error in table(arbres[, c(3, 5)]): object &#39;arbres&#39; not found
-</code></pre>
-
-<pre><code>## Error in row.names(densite): object &#39;densite&#39; not found
-</code></pre>
-
-<pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-6-1.png" title="plot of chunk unnamed-chunk-6" alt="plot of chunk unnamed-chunk-6" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -176,8 +162,7 @@ plot(elevation, densite[,1], axes = FALSE,
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-8-1.png" title="plot of chunk unnamed-chunk-8" alt="plot of chunk unnamed-chunk-8" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -197,8 +182,7 @@ plot(elevation, densite[,1], axes = FALSE,
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-10-1.png" title="plot of chunk unnamed-chunk-10" alt="plot of chunk unnamed-chunk-10" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -216,14 +200,7 @@ axis(2)
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in axis(1, seq(0, 1000, 100)): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in axis(2): plot.new has not been called yet
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-12-1.png" title="plot of chunk unnamed-chunk-12" alt="plot of chunk unnamed-chunk-12" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -240,17 +217,7 @@ axis(2)
 
     </div>
     <div class='right' style='float:right;width:45%'>
-     <pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in axis(1, seq(0, 1000, 100)): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in axis(2): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in title(main = &quot;Densité au long du gradient d&#39;élévation&quot;): plot.new has not been called yet
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-14-1.png" title="plot of chunk unnamed-chunk-14" alt="plot of chunk unnamed-chunk-14" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -267,20 +234,7 @@ axis(2)
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in axis(1, seq(0, 1000, 100)): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in axis(2): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in title(main = &quot;Densité au long du gradient d&#39;élévation&quot;): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in points(elevation, densite[, 3], pch = 19, cex = 1.5): object &#39;elevation&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-16-1.png" title="plot of chunk unnamed-chunk-16" alt="plot of chunk unnamed-chunk-16" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -298,26 +252,7 @@ lines(elevation, densite[,3], lty  = 3, lwd = 1.5)
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in axis(1, seq(0, 1000, 100)): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in axis(2): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in title(main = &quot;Densité au long du gradient d&#39;élévation&quot;): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in points(elevation, densite[, 3], pch = 19, cex = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in lines(elevation, densite[, 1], lty = 1, lwd = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in lines(elevation, densite[, 3], lty = 3, lwd = 1.5): object &#39;elevation&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-18-1.png" title="plot of chunk unnamed-chunk-18" alt="plot of chunk unnamed-chunk-18" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -336,10 +271,24 @@ abline(model, col = &quot;darkred&quot;)
 
     </div>
     <div class='right' style='float:right;width:60%'>
-     <pre><code>## Error in eval(predvars, data, env): object &#39;densite&#39; not found
-</code></pre>
-
-<pre><code>## Error in summary(model): object &#39;model&#39; not found
+     <pre><code>## 
+## Call:
+## lm(formula = densite[, 3] ~ elevation)
+## 
+## Residuals:
+##     Min      1Q  Median      3Q     Max 
+## -59.796 -26.743  -3.565  24.050  92.175 
+## 
+## Coefficients:
+##              Estimate Std. Error t value Pr(&gt;|t|)    
+## (Intercept) 148.10588   11.23433  13.183   &lt;2e-16 ***
+## elevation    -0.16650    0.01976  -8.428    5e-11 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Residual standard error: 40.32 on 48 degrees of freedom
+## Multiple R-squared:  0.5968, Adjusted R-squared:  0.5884 
+## F-statistic: 71.04 on 1 and 48 DF,  p-value: 4.999e-11
 </code></pre>
 
     </div>
@@ -358,32 +307,7 @@ abline(model, col = &quot;darkred&quot;)
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in axis(1, seq(0, 1000, 100)): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in axis(2): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in title(main = &quot;Densité au long du gradient d&#39;élévation&quot;): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in points(elevation, densite[, 3], pch = 19, cex = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in lines(elevation, densite[, 1], lty = 1, lwd = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in lines(elevation, densite[, 3], lty = 3, lwd = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in eval(predvars, data, env): object &#39;densite&#39; not found
-</code></pre>
-
-<pre><code>## Error in abline(model, col = &quot;darkred&quot;): object &#39;model&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-22-1.png" title="plot of chunk unnamed-chunk-22" alt="plot of chunk unnamed-chunk-22" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -402,29 +326,7 @@ abline(model, col = &quot;darkred&quot;)
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in axis(1, seq(0, 1000, 100)): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in axis(2): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in title(main = &quot;Densité au long du gradient d&#39;élévation&quot;): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in points(elevation, densite[, 3], pch = 19, cex = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in lines(elevation, densite[, 1], lty = 1, lwd = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in lines(elevation, densite[, 3], lty = 3, lwd = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in strwidth(legend, units = &quot;user&quot;, cex = cex, font = text.font): plot.new has not been called yet
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-24-1.png" title="plot of chunk unnamed-chunk-24" alt="plot of chunk unnamed-chunk-24" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -443,35 +345,7 @@ text(x = 850, y = 25, paste(&quot;R2=&quot;,r2),
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Error in plot(elevation, densite[, 1], axes = FALSE, xlab = &quot;Élévation&quot;, : object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in axis(1, seq(0, 1000, 100)): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in axis(2): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in title(main = &quot;Densité au long du gradient d&#39;élévation&quot;): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in points(elevation, densite[, 3], pch = 19, cex = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in lines(elevation, densite[, 1], lty = 1, lwd = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in lines(elevation, densite[, 3], lty = 3, lwd = 1.5): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in strwidth(legend, units = &quot;user&quot;, cex = cex, font = text.font): plot.new has not been called yet
-</code></pre>
-
-<pre><code>## Error in summary(model): object &#39;model&#39; not found
-</code></pre>
-
-<pre><code>## Error in paste(&quot;R2=&quot;, r2): object &#39;r2&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-26-1.png" title="plot of chunk unnamed-chunk-26" alt="plot of chunk unnamed-chunk-26" width="100%" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -519,24 +393,7 @@ points(elevation, densite[,3])
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Warning in file(file, &quot;rt&quot;): cannot open file &#39;donnees/arbres.csv&#39;: No such
-## file or directory
-</code></pre>
-
-<pre><code>## Error in file(file, &quot;rt&quot;): cannot open the connection
-</code></pre>
-
-<pre><code>## Error in table(arbres[, c(3, 5)]): object &#39;arbres&#39; not found
-</code></pre>
-
-<pre><code>## Error in row.names(densite): object &#39;densite&#39; not found
-</code></pre>
-
-<pre><code>## Error in plot(elevation, densite[, 1], pch = 19, xlab = &quot;Elevation&quot;, ylab = &quot;Densité&quot;): object &#39;elevation&#39; not found
-</code></pre>
-
-<pre><code>## Error in points(elevation, densite[, 3]): object &#39;elevation&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-28-1.png" title="plot of chunk unnamed-chunk-28" alt="plot of chunk unnamed-chunk-28" height="500px" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -555,18 +412,7 @@ barplot(n_tot)
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Warning in file(file, &quot;rt&quot;): cannot open file &#39;donnees/arbres.csv&#39;: No such
-## file or directory
-</code></pre>
-
-<pre><code>## Error in file(file, &quot;rt&quot;): cannot open the connection
-</code></pre>
-
-<pre><code>## Error in table(arbres$esp): object &#39;arbres&#39; not found
-</code></pre>
-
-<pre><code>## Error in barplot(n_tot): object &#39;n_tot&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-30-1.png" title="plot of chunk unnamed-chunk-30" alt="plot of chunk unnamed-chunk-30" height="500px" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -583,8 +429,7 @@ barplot(n_tot)
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <pre><code>## Error in hist(densite[, 3]): object &#39;densite&#39; not found
-</code></pre>
+     <p><img src="assets/fig/unnamed-chunk-32-1.png" title="plot of chunk unnamed-chunk-32" alt="plot of chunk unnamed-chunk-32" height="500px" style="display: block; margin: auto;" /></p>
 
     </div>
   </article>
@@ -728,7 +573,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 20
+<pre><code>## [1] 26
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -906,7 +751,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.36875
+<pre><code>## [1] 0.1856509
 </code></pre>
 
   </article>
@@ -924,37 +769,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    5    4    4    6    3    5    2     4     1     5     4
-##  [2,]    3    0    6    5    5    7    4    6    1     5     2     6     5
-##  [3,]    5    6    0    3    3    2    2    2    5     3     4     1     1
-##  [4,]    4    5    3    0    2    2    1    1    4     2     3     3     2
-##  [5,]    4    5    3    2    0    2    1    1    4     2     3     3     2
-##  [6,]    6    7    2    2    2    0    3    1    6     4     5     1     2
-##  [7,]    3    4    2    1    1    3    0    2    3     1     2     2     1
-##  [8,]    5    6    2    1    1    1    2    0    5     3     4     2     1
-##  [9,]    2    1    5    4    4    6    3    5    0     4     1     5     4
-## [10,]    4    5    3    2    2    4    1    3    4     0     3     3     2
-## [11,]    1    2    4    3    3    5    2    4    1     3     0     4     3
-## [12,]    5    6    1    3    3    1    2    2    5     3     4     0     1
-## [13,]    4    5    1    2    2    2    1    1    4     2     3     1     0
-## [14,]    2    3    3    2    2    4    1    3    2     2     1     3     2
-## [15,]    1    4    6    5    5    7    4    6    3     5     2     6     5
+##  [1,]    0    2    1    1    3    2    2    2    1     3     2     1     1
+##  [2,]    2    0    3    1    2    2    1    4    2     2     3     3     3
+##  [3,]    1    3    0    2    4    3    3    3    2     4     3     2     2
+##  [4,]    1    1    2    0    2    2    1    3    1     2     2     2     2
+##  [5,]    3    2    4    2    0    2    1    4    3     2     4     3     3
+##  [6,]    2    2    3    2    2    0    1    2    3     2     4     2     1
+##  [7,]    2    1    3    1    1    1    0    3    2     1     3     2     2
+##  [8,]    2    4    3    3    4    2    3    0    3     4     4     1     1
+##  [9,]    1    2    2    1    3    3    2    3    0     3     1     2     2
+## [10,]    3    2    4    2    2    2    1    4    3     0     4     3     3
+## [11,]    2    3    3    2    4    4    3    4    1     4     0     3     3
+## [12,]    1    3    2    2    3    2    2    1    2     3     3     0     1
+## [13,]    1    3    2    2    3    1    2    1    2     3     3     1     0
+## [14,]    1    2    2    2    2    2    1    2    2     2     3     1     2
+## [15,]    1    1    2    2    3    3    2    3    2     3     3     2     2
 ##       [,14] [,15]
-##  [1,]     2     1
-##  [2,]     3     4
-##  [3,]     3     6
-##  [4,]     2     5
-##  [5,]     2     5
-##  [6,]     4     7
-##  [7,]     1     4
-##  [8,]     3     6
-##  [9,]     2     3
-## [10,]     2     5
-## [11,]     1     2
-## [12,]     3     6
-## [13,]     2     5
-## [14,]     0     3
-## [15,]     3     0
+##  [1,]     1     1
+##  [2,]     2     1
+##  [3,]     2     2
+##  [4,]     2     2
+##  [5,]     2     3
+##  [6,]     2     3
+##  [7,]     1     2
+##  [8,]     2     3
+##  [9,]     2     2
+## [10,]     2     3
+## [11,]     3     3
+## [12,]     1     2
+## [13,]     2     2
+## [14,]     0     2
+## [15,]     2     0
 </code></pre>
 
   </article>
@@ -971,9 +816,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.031256971 0.009208911 0.365343991 0.532405528 0.827024940
-##  [6] 0.431165264 0.807095893 1.000000000 0.031256971 0.337103290
-## [11] 0.096883798 0.463465226 0.776588812 0.266329965 0.009208911
+<pre><code>##  [1] 1.0000000 0.5084329 0.3009694 0.5862518 0.1460389 0.2731127 0.6312672
+##  [8] 0.3100988 0.3944302 0.1460389 0.1187114 0.7911433 0.5492889 0.5604062
+## [15] 0.3489645
 </code></pre>
 
   </article>
@@ -1050,13 +895,6 @@ class(iris)
 <pre><code class="r">library(knitr)
 iris_tex &lt;- kable(iris,format=&quot;latex&quot;)
 writeLines(iris_tex, con = &quot;./donnees/iris.tex&quot;, sep = &quot;\n&quot;, useBytes = FALSE)
-</code></pre>
-
-<pre><code>## Warning in file(con, &quot;w&quot;): cannot open file &#39;./donnees/iris.tex&#39;: No such
-## file or directory
-</code></pre>
-
-<pre><code>## Error in file(con, &quot;w&quot;): cannot open the connection
 </code></pre>
 
   </article>
