--- a/cours6/index.html
+++ b/cours6/index.html
@@ -573,7 +573,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 27
+<pre><code>## [1] 22
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -751,7 +751,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3628258
+<pre><code>## [1] 0.3481405
 </code></pre>
 
   </article>
@@ -769,37 +769,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    2    1    2    2    1    2    1     3     2     2     4
-##  [2,]    3    0    2    4    3    1    2    3    2     2     1     3     3
-##  [3,]    2    2    0    2    3    2    2    1    1     3     1     2     4
-##  [4,]    1    4    2    0    3    3    2    1    2     4     3     2     5
-##  [5,]    2    3    3    3    0    4    1    3    3     3     2     2     2
-##  [6,]    2    1    2    3    4    0    3    2    1     1     2     3     2
-##  [7,]    1    2    2    2    1    3    0    2    2     4     1     1     3
-##  [8,]    2    3    1    1    3    2    2    0    1     3     2     1     4
-##  [9,]    1    2    1    2    3    1    2    1    0     2     1     2     3
-## [10,]    3    2    3    4    3    1    4    3    2     0     3     4     1
-## [11,]    2    1    1    3    2    2    1    2    1     3     0     2     4
-## [12,]    2    3    2    2    2    3    1    1    2     4     2     0     4
-## [13,]    4    3    4    5    2    2    3    4    3     1     4     4     0
-## [14,]    3    4    2    2    3    3    2    1    2     4     3     1     5
-## [15,]    3    4    4    4    1    3    2    4    4     2     3     3     1
+##  [1,]    0    2    1    2    3    1  Inf    1    2     2     1     1     1
+##  [2,]    2    0    3    4    4    3  Inf    3    3     4     1     2     3
+##  [3,]    1    3    0    1    3    2  Inf    2    2     3     2     2     2
+##  [4,]    2    4    1    0    2    3  Inf    2    1     3     3     2     3
+##  [5,]    3    4    3    2    0    4  Inf    2    1     3     3     2     3
+##  [6,]    1    3    2    3    4    0  Inf    2    3     3     2     2     2
+##  [7,]  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf   Inf   Inf   Inf   Inf
+##  [8,]    1    3    2    2    2    2  Inf    0    1     1     2     2     2
+##  [9,]    2    3    2    1    1    3  Inf    1    0     2     2     1     2
+## [10,]    2    4    3    3    3    3  Inf    1    2     0     3     2     1
+## [11,]    1    1    2    3    3    2  Inf    2    2     3     0     1     2
+## [12,]    1    2    2    2    2    2  Inf    2    1     2     1     0     1
+## [13,]    1    3    2    3    3    2  Inf    2    2     1     2     1     0
+## [14,]    1    2    2    3    4    2  Inf    2    3     3     1     2     2
+## [15,]    2    4    3    3    3    3  Inf    1    2     1     3     3     2
 ##       [,14] [,15]
-##  [1,]     3     3
-##  [2,]     4     4
-##  [3,]     2     4
-##  [4,]     2     4
-##  [5,]     3     1
-##  [6,]     3     3
-##  [7,]     2     2
-##  [8,]     1     4
-##  [9,]     2     4
-## [10,]     4     2
-## [11,]     3     3
-## [12,]     1     3
-## [13,]     5     1
-## [14,]     0     4
-## [15,]     4     0
+##  [1,]     1     2
+##  [2,]     2     4
+##  [3,]     2     3
+##  [4,]     3     3
+##  [5,]     4     3
+##  [6,]     2     3
+##  [7,]   Inf   Inf
+##  [8,]     2     1
+##  [9,]     3     2
+## [10,]     3     1
+## [11,]     1     3
+## [12,]     2     3
+## [13,]     2     2
+## [14,]     0     3
+## [15,]     3     0
 </code></pre>
 
   </article>
@@ -816,9 +816,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.7163186 0.3768917 0.8980483 0.3632723 0.2190631 0.5122255 0.7734358
-##  [8] 0.7412608 0.9639845 0.3571785 1.0000000 0.4516030 0.2043389 0.2972973
-## [15] 0.1055244
+<pre><code>##  [1] 1.0000000 0.1665150 0.3191230 0.2008457 0.1160393 0.2657485 0.0000000
+##  [8] 0.5671656 0.4366507 0.4320330 0.6265886 0.7590467 0.7930201 0.4322635
+## [15] 0.2655356
 </code></pre>
 
   </article>
