--- a/cours6/index.html
+++ b/cours6/index.html
@@ -573,7 +573,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 25
+<pre><code>## [1] 24
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -751,7 +751,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.2472
+<pre><code>## [1] 0.1336806
 </code></pre>
 
   </article>
@@ -769,37 +769,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    3    2    1    2    1    2    1     2     2     4     2
-##  [2,]    3    0    4    3    4    2    2    2    3     1     3     5     3
-##  [3,]    3    4    0    1    3    2    2    2    2     3     2     1     1
-##  [4,]    2    3    1    0    3    1    1    2    2     2     1     2     2
-##  [5,]    1    4    3    3    0    2    2    2    1     3     2     4     2
-##  [6,]    2    2    2    1    2    0    2    2    1     1     1     3     2
-##  [7,]    1    2    2    1    2    2    0    1    2     1     2     3     2
-##  [8,]    2    2    2    2    2    2    1    0    2     1     2     3     1
-##  [9,]    1    3    2    2    1    1    2    2    0     2     1     3     1
-## [10,]    2    1    3    2    3    1    1    1    2     0     2     4     2
-## [11,]    2    3    2    1    2    1    2    2    1     2     0     3     2
-## [12,]    4    5    1    2    4    3    3    3    3     4     3     0     2
-## [13,]    2    3    1    2    2    2    2    1    1     2     2     2     0
-## [14,]    2    3    3    2    1    2    2    1    2     2     1     4     2
-## [15,]    2    4    3    3    2    2    3    3    1     3     2     4     2
+##  [1,]    0    3    1    3    3    4  Inf    2    2     3     3     3     2
+##  [2,]    3    0    2    1    1    3  Inf    2    1     3     2     2     3
+##  [3,]    1    2    0    2    2    3  Inf    1    1     2     2     2     1
+##  [4,]    3    1    2    0    2    3  Inf    3    1     3     2     2     3
+##  [5,]    3    1    2    2    0    2  Inf    1    2     2     2     1     2
+##  [6,]    4    3    3    3    2    0  Inf    3    2     2     2     1     2
+##  [7,]  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf   Inf   Inf   Inf   Inf
+##  [8,]    2    2    1    3    1    3  Inf    0    2     3     1     2     2
+##  [9,]    2    1    1    1    2    2  Inf    2    0     2     1     1     2
+## [10,]    3    3    2    3    2    2  Inf    3    2     0     2     1     2
+## [11,]    3    2    2    2    2    2  Inf    1    1     2     0     1     2
+## [12,]    3    2    2    2    1    1  Inf    2    1     1     1     0     1
+## [13,]    2    3    1    3    2    2  Inf    2    2     2     2     1     0
+## [14,]    3    2    2    1    2    2  Inf    3    2     2     2     1     2
+## [15,]    2    2    1    2    3    3  Inf    2    1     1     2     2     2
 ##       [,14] [,15]
-##  [1,]     2     2
-##  [2,]     3     4
-##  [3,]     3     3
-##  [4,]     2     3
-##  [5,]     1     2
-##  [6,]     2     2
-##  [7,]     2     3
-##  [8,]     1     3
+##  [1,]     3     2
+##  [2,]     2     2
+##  [3,]     2     1
+##  [4,]     1     2
+##  [5,]     2     3
+##  [6,]     2     3
+##  [7,]   Inf   Inf
+##  [8,]     3     2
 ##  [9,]     2     1
-## [10,]     2     3
-## [11,]     1     2
-## [12,]     4     4
+## [10,]     2     1
+## [11,]     2     2
+## [12,]     1     2
 ## [13,]     2     2
-## [14,]     0     3
-## [15,]     3     0
+## [14,]     0     1
+## [15,]     1     0
 </code></pre>
 
   </article>
@@ -816,9 +816,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.45851505 0.13844275 0.35660415 0.93203039 0.42205128 1.00000000
-##  [7] 0.60750598 0.49781457 0.81633776 0.55734439 0.78806828 0.08857945
-## [13] 0.41501113 0.42424595 0.20277597
+<pre><code>##  [1] 1.750701e-01 5.091597e-01 6.889476e-01 5.210222e-01 4.826571e-01
+##  [6] 2.383984e-01 6.455483e-17 4.520634e-01 1.000000e+00 4.088038e-01
+## [11] 6.073856e-01 9.381613e-01 4.134685e-01 5.412019e-01 6.705906e-01
 </code></pre>
 
   </article>
