--- a/cours6/index.html
+++ b/cours6/index.html
@@ -751,7 +751,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.1336806
+<pre><code>## [1] 0.2387153
 </code></pre>
 
   </article>
@@ -769,35 +769,35 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    1    3    3    4  Inf    2    2     3     3     3     2
-##  [2,]    3    0    2    1    1    3  Inf    2    1     3     2     2     3
-##  [3,]    1    2    0    2    2    3  Inf    1    1     2     2     2     1
-##  [4,]    3    1    2    0    2    3  Inf    3    1     3     2     2     3
-##  [5,]    3    1    2    2    0    2  Inf    1    2     2     2     1     2
-##  [6,]    4    3    3    3    2    0  Inf    3    2     2     2     1     2
-##  [7,]  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf   Inf   Inf   Inf   Inf
-##  [8,]    2    2    1    3    1    3  Inf    0    2     3     1     2     2
-##  [9,]    2    1    1    1    2    2  Inf    2    0     2     1     1     2
-## [10,]    3    3    2    3    2    2  Inf    3    2     0     2     1     2
-## [11,]    3    2    2    2    2    2  Inf    1    1     2     0     1     2
-## [12,]    3    2    2    2    1    1  Inf    2    1     1     1     0     1
-## [13,]    2    3    1    3    2    2  Inf    2    2     2     2     1     0
-## [14,]    3    2    2    1    2    2  Inf    3    2     2     2     1     2
-## [15,]    2    2    1    2    3    3  Inf    2    1     1     2     2     2
+##  [1,]    0    2    1    1    1    1    2    2    1     1     2     1     2
+##  [2,]    2    0    3    1    3    1    2    4    3     2     1     2     1
+##  [3,]    1    3    0    2    2    2    3    1    2     2     3     2     3
+##  [4,]    1    1    2    0    2    2    1    3    2     2     2     1     1
+##  [5,]    1    3    2    2    0    2    3    3    2     2     3     2     3
+##  [6,]    1    1    2    2    2    0    3    3    2     2     2     2     2
+##  [7,]    2    2    3    1    3    3    0    4    3     3     3     2     2
+##  [8,]    2    4    1    3    3    3    4    0    3     3     4     3     4
+##  [9,]    1    3    2    2    2    2    3    3    0     2     3     2     3
+## [10,]    1    2    2    2    2    2    3    3    2     0     1     2     2
+## [11,]    2    1    3    2    3    2    3    4    3     1     0     3     1
+## [12,]    1    2    2    1    2    2    2    3    2     2     3     0     2
+## [13,]    2    1    3    1    3    2    2    4    3     2     1     2     0
+## [14,]    1    2    2    2    2    2    3    3    2     2     1     2     2
+## [15,]    2    3    3    3    3    3    4    4    1     3     2     3     3
 ##       [,14] [,15]
-##  [1,]     3     2
-##  [2,]     2     2
-##  [3,]     2     1
-##  [4,]     1     2
+##  [1,]     1     2
+##  [2,]     2     3
+##  [3,]     2     3
+##  [4,]     2     3
 ##  [5,]     2     3
 ##  [6,]     2     3
-##  [7,]   Inf   Inf
-##  [8,]     3     2
+##  [7,]     3     4
+##  [8,]     3     4
 ##  [9,]     2     1
-## [10,]     2     1
-## [11,]     2     2
-## [12,]     1     2
-## [13,]     2     2
+## [10,]     2     3
+## [11,]     1     2
+## [12,]     2     3
+## [13,]     2     3
 ## [14,]     0     1
 ## [15,]     1     0
 </code></pre>
@@ -816,9 +816,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 1.750701e-01 5.091597e-01 6.889476e-01 5.210222e-01 4.826571e-01
-##  [6] 2.383984e-01 6.455483e-17 4.520634e-01 1.000000e+00 4.088038e-01
-## [11] 6.073856e-01 9.381613e-01 4.134685e-01 5.412019e-01 6.705906e-01
+<pre><code>##  [1] 1.0000000 0.6657693 0.3029293 0.8275680 0.2721133 0.4532779 0.3093781
+##  [8] 0.1132471 0.3623633 0.4345666 0.5970063 0.4973055 0.5688102 0.5248166
+## [15] 0.3316634
 </code></pre>
 
   </article>
