Update the slides

--- a/cours6/index.html
+++ b/cours6/index.html
@@ -573,7 +573,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 24
+<pre><code>## [1] 22
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -751,7 +751,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.2387153
+<pre><code>## [1] 0.2107438
 </code></pre>
 
   </article>
@@ -769,37 +769,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    2    1    1    1    1    2    2    1     1     2     1     2
-##  [2,]    2    0    3    1    3    1    2    4    3     2     1     2     1
-##  [3,]    1    3    0    2    2    2    3    1    2     2     3     2     3
-##  [4,]    1    1    2    0    2    2    1    3    2     2     2     1     1
-##  [5,]    1    3    2    2    0    2    3    3    2     2     3     2     3
-##  [6,]    1    1    2    2    2    0    3    3    2     2     2     2     2
-##  [7,]    2    2    3    1    3    3    0    4    3     3     3     2     2
-##  [8,]    2    4    1    3    3    3    4    0    3     3     4     3     4
-##  [9,]    1    3    2    2    2    2    3    3    0     2     3     2     3
-## [10,]    1    2    2    2    2    2    3    3    2     0     1     2     2
-## [11,]    2    1    3    2    3    2    3    4    3     1     0     3     1
-## [12,]    1    2    2    1    2    2    2    3    2     2     3     0     2
-## [13,]    2    1    3    1    3    2    2    4    3     2     1     2     0
-## [14,]    1    2    2    2    2    2    3    3    2     2     1     2     2
-## [15,]    2    3    3    3    3    3    4    4    1     3     2     3     3
+##  [1,]    0    2    2    1  Inf    3    2    2    2     2     3   Inf     1
+##  [2,]    2    0    2    2  Inf    3    2    3    2     1     3   Inf     1
+##  [3,]    2    2    0    3  Inf    1    1    2    3     1     2   Inf     2
+##  [4,]    1    2    3    0  Inf    4    2    1    1     2     2   Inf     1
+##  [5,]  Inf  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [6,]    3    3    1    4  Inf    0    2    3    4     2     3   Inf     3
+##  [7,]    2    2    1    2  Inf    2    0    3    2     2     1   Inf     1
+##  [8,]    2    3    2    1  Inf    3    3    0    2     2     3   Inf     2
+##  [9,]    2    2    3    1  Inf    4    2    2    0     2     1   Inf     1
+## [10,]    2    1    1    2  Inf    2    2    2    2     0     3   Inf     1
+## [11,]    3    3    2    2  Inf    3    1    3    1     3     0   Inf     2
+## [12,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf     0   Inf
+## [13,]    1    1    2    1  Inf    3    1    2    1     1     2   Inf     0
+## [14,]    1    2    1    2  Inf    2    2    1    2     1     3   Inf     1
+## [15,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
 ##       [,14] [,15]
-##  [1,]     1     2
-##  [2,]     2     3
-##  [3,]     2     3
-##  [4,]     2     3
-##  [5,]     2     3
-##  [6,]     2     3
-##  [7,]     3     4
-##  [8,]     3     4
-##  [9,]     2     1
-## [10,]     2     3
-## [11,]     1     2
-## [12,]     2     3
-## [13,]     2     3
-## [14,]     0     1
-## [15,]     1     0
+##  [1,]     1   Inf
+##  [2,]     2   Inf
+##  [3,]     1   Inf
+##  [4,]     2   Inf
+##  [5,]   Inf   Inf
+##  [6,]     2   Inf
+##  [7,]     2   Inf
+##  [8,]     1   Inf
+##  [9,]     2   Inf
+## [10,]     1   Inf
+## [11,]     3   Inf
+## [12,]   Inf   Inf
+## [13,]     1   Inf
+## [14,]     0   Inf
+## [15,]   Inf     0
 </code></pre>
 
   </article>
@@ -816,9 +816,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 1.0000000 0.6657693 0.3029293 0.8275680 0.2721133 0.4532779 0.3093781
-##  [8] 0.1132471 0.3623633 0.4345666 0.5970063 0.4973055 0.5688102 0.5248166
-## [15] 0.3316634
+<pre><code>##  [1] 5.489807e-01 3.749646e-01 9.224938e-01 4.941031e-01 6.860102e-18
+##  [6] 4.215816e-01 4.614427e-01 3.414041e-01 3.635550e-01 7.325482e-01
+## [11] 1.885128e-01 6.860102e-18 9.084274e-01 1.000000e+00 6.860102e-18
 </code></pre>
 
   </article>
