--- a/cours6/index.html
+++ b/cours6/index.html
@@ -573,7 +573,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 22
+<pre><code>## [1] 18
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -751,7 +751,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.2107438
+<pre><code>## [1] 0.3966049
 </code></pre>
 
   </article>
@@ -769,37 +769,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    2    2    1  Inf    3    2    2    2     2     3   Inf     1
-##  [2,]    2    0    2    2  Inf    3    2    3    2     1     3   Inf     1
-##  [3,]    2    2    0    3  Inf    1    1    2    3     1     2   Inf     2
-##  [4,]    1    2    3    0  Inf    4    2    1    1     2     2   Inf     1
-##  [5,]  Inf  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [6,]    3    3    1    4  Inf    0    2    3    4     2     3   Inf     3
-##  [7,]    2    2    1    2  Inf    2    0    3    2     2     1   Inf     1
-##  [8,]    2    3    2    1  Inf    3    3    0    2     2     3   Inf     2
-##  [9,]    2    2    3    1  Inf    4    2    2    0     2     1   Inf     1
-## [10,]    2    1    1    2  Inf    2    2    2    2     0     3   Inf     1
-## [11,]    3    3    2    2  Inf    3    1    3    1     3     0   Inf     2
-## [12,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf     0   Inf
-## [13,]    1    1    2    1  Inf    3    1    2    1     1     2   Inf     0
-## [14,]    1    2    1    2  Inf    2    2    1    2     1     3   Inf     1
-## [15,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [1,]    0    3    3    1    3    1    3    2    1     3     2     2   Inf
+##  [2,]    3    0    4    3    1    4    4    3    2     2     1     3   Inf
+##  [3,]    3    4    0    2    4    4    2    3    2     2     3     1   Inf
+##  [4,]    1    3    2    0    3    2    2    2    1     2     2     1   Inf
+##  [5,]    3    1    4    3    0    4    4    3    2     2     1     3   Inf
+##  [6,]    1    4    4    2    4    0    4    2    2     4     3     3   Inf
+##  [7,]    3    4    2    2    4    4    0    3    2     2     3     1   Inf
+##  [8,]    2    3    3    2    3    2    3    0    1     3     2     2   Inf
+##  [9,]    1    2    2    1    2    2    2    1    0     2     1     1   Inf
+## [10,]    3    2    2    2    2    4    2    3    2     0     1     1   Inf
+## [11,]    2    1    3    2    1    3    3    2    1     1     0     2   Inf
+## [12,]    2    3    1    1    3    3    1    2    1     1     2     0   Inf
+## [13,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf     0
+## [14,]    2    4    4    3    4    1    4    1    2     4     3     3   Inf
+## [15,]    1    4    4    2    4    2    4    3    2     4     3     3   Inf
 ##       [,14] [,15]
-##  [1,]     1   Inf
-##  [2,]     2   Inf
-##  [3,]     1   Inf
-##  [4,]     2   Inf
-##  [5,]   Inf   Inf
-##  [6,]     2   Inf
-##  [7,]     2   Inf
-##  [8,]     1   Inf
-##  [9,]     2   Inf
-## [10,]     1   Inf
-## [11,]     3   Inf
-## [12,]   Inf   Inf
-## [13,]     1   Inf
-## [14,]     0   Inf
-## [15,]   Inf     0
+##  [1,]     2     1
+##  [2,]     4     4
+##  [3,]     4     4
+##  [4,]     3     2
+##  [5,]     4     4
+##  [6,]     1     2
+##  [7,]     4     4
+##  [8,]     1     3
+##  [9,]     2     2
+## [10,]     4     4
+## [11,]     3     3
+## [12,]     3     3
+## [13,]   Inf   Inf
+## [14,]     0     3
+## [15,]     3     0
 </code></pre>
 
   </article>
@@ -816,9 +816,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 5.489807e-01 3.749646e-01 9.224938e-01 4.941031e-01 6.860102e-18
-##  [6] 4.215816e-01 4.614427e-01 3.414041e-01 3.635550e-01 7.325482e-01
-## [11] 1.885128e-01 6.860102e-18 9.084274e-01 1.000000e+00 6.860102e-18
+<pre><code>##  [1] 0.6903411 0.2665018 0.2552152 0.7726840 0.2665018 0.2710183 0.2552152
+##  [8] 0.3658150 1.0000000 0.4401321 0.6040415 0.8336750 0.0000000 0.1949556
+## [15] 0.2113360
 </code></pre>
 
   </article>
