--- a/cours6/index.html
+++ b/cours6/index.html
@@ -569,7 +569,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 23
+<pre><code>## [1] 16
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -747,7 +747,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3431002
+<pre><code>## [1] 0.40625
 </code></pre>
 
   </article>
@@ -765,37 +765,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    1    2    3    2    2    2    2    2     1     2     1     1
-##  [2,]    1    0    3    4    3    3    3    1    3     2     3     2     2
-##  [3,]    2    3    0    3    2    2    2    4    1     1     1     1     1
-##  [4,]    3    4    3    0    3    1    3    5    4     2     4     3     4
-##  [5,]    2    3    2    3    0    2    2    4    3     1     1     3     2
-##  [6,]    2    3    2    1    2    0    2    4    3     1     3     2     3
-##  [7,]    2    3    2    3    2    2    0    4    3     1     3     3     3
-##  [8,]    2    1    4    5    4    4    4    0    4     3     4     3     3
-##  [9,]    2    3    1    4    3    3    3    4    0     2     2     1     2
-## [10,]    1    2    1    2    1    1    1    3    2     0     2     2     2
-## [11,]    2    3    1    4    1    3    3    4    2     2     0     2     1
-## [12,]    1    2    1    3    3    2    3    3    1     2     2     0     2
-## [13,]    1    2    1    4    2    3    3    3    2     2     1     2     0
-## [14,]    2    3    2    2    3    1    3    4    2     2     3     1     3
-## [15,]    2    1    4    5    4    4    4    2    4     3     4     3     3
+##  [1,]    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [2,]  Inf    0    3    3  Inf    2    1    3    3     3     4     4     2
+##  [3,]  Inf    3    0    4  Inf    3    2    2    4     2     3     5     1
+##  [4,]  Inf    3    4    0  Inf    1    2    2    1     4     5     2     3
+##  [5,]  Inf  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [6,]  Inf    2    3    1  Inf    0    1    3    1     3     4     2     2
+##  [7,]  Inf    1    2    2  Inf    1    0    2    2     2     3     3     1
+##  [8,]  Inf    3    2    2  Inf    3    2    0    3     2     3     3     1
+##  [9,]  Inf    3    4    1  Inf    1    2    3    0     4     5     1     3
+## [10,]  Inf    3    2    4  Inf    3    2    2    4     0     1     5     1
+## [11,]  Inf    4    3    5  Inf    4    3    3    5     1     0     6     2
+## [12,]  Inf    4    5    2  Inf    2    3    3    1     5     6     0     4
+## [13,]  Inf    2    1    3  Inf    2    1    1    3     1     2     4     0
+## [14,]  Inf    5    4    2  Inf    3    4    2    2     4     5     1     3
+## [15,]  Inf    4    3    1  Inf    2    3    1    2     3     4     2     2
 ##       [,14] [,15]
-##  [1,]     2     2
-##  [2,]     3     1
-##  [3,]     2     4
-##  [4,]     2     5
-##  [5,]     3     4
-##  [6,]     1     4
-##  [7,]     3     4
-##  [8,]     4     2
-##  [9,]     2     4
-## [10,]     2     3
-## [11,]     3     4
-## [12,]     1     3
-## [13,]     3     3
-## [14,]     0     4
-## [15,]     4     0
+##  [1,]   Inf   Inf
+##  [2,]     5     4
+##  [3,]     4     3
+##  [4,]     2     1
+##  [5,]   Inf   Inf
+##  [6,]     3     2
+##  [7,]     4     3
+##  [8,]     2     1
+##  [9,]     2     2
+## [10,]     4     3
+## [11,]     5     4
+## [12,]     1     2
+## [13,]     3     2
+## [14,]     0     1
+## [15,]     1     0
 </code></pre>
 
   </article>
@@ -812,9 +812,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.7990911 0.4076986 1.0000000 0.2714694 0.4232156 0.6860168 0.2542222
-##  [8] 0.1155919 0.5202660 0.8966545 0.5960484 0.8350045 0.6790772 0.6257461
-## [15] 0.1155919
+<pre><code>##  [1] 1.811161e-17 1.924586e-01 3.423434e-01 3.979555e-01 1.811161e-17
+##  [6] 4.496936e-01 5.621799e-01 4.653516e-01 3.534393e-01 7.755845e-01
+## [11] 2.655162e-01 1.847627e-01 1.000000e+00 1.862605e-01 3.593125e-01
 </code></pre>
 
   </article>
