Update the slides

--- a/cours3/index.html
+++ b/cours3/index.html
@@ -609,11 +609,11 @@ acteurs_films &lt;- dbGetQuery(con,sql_requete)
 head(acteurs_films,4)
 </code></pre>
 
-<pre><code>##                     titre annee id_film id_film
-## 1        &#39;Breaker&#39; Morant  1980       4       4
-## 2             &#39;burbs, The  1989       5       5
-## 3   &#39;Crocodile&#39; Dundee II  1988       6       6
-## 4 *batteries not included  1987       7       7
+<pre><code>##                     titre annee id_film id_film..4
+## 1        &#39;Breaker&#39; Morant  1980       4          4
+## 2             &#39;burbs, The  1989       5          5
+## 3   &#39;Crocodile&#39; Dundee II  1988       6          6
+## 4 *batteries not included  1987       7          7
 </code></pre>
 
   </article>
