--- a/cours6/index.html
+++ b/cours6/index.html
@@ -747,7 +747,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3734568
+<pre><code>## [1] 0.3719136
 </code></pre>
 
   </article>
@@ -765,37 +765,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    1    3    2    4    5    2    4     3     4   Inf     4
-##  [2,]    3    0    2    2    3    3    4    1    3     2     1   Inf     3
-##  [3,]    1    2    0    2    1    3    4    1    3     2     3   Inf     3
-##  [4,]    3    2    2    0    1    1    2    1    3     2     3   Inf     1
-##  [5,]    2    3    1    1    0    2    3    2    4     3     4   Inf     2
-##  [6,]    4    3    3    1    2    0    3    2    4     3     4   Inf     2
-##  [7,]    5    4    4    2    3    3    0    3    5     4     5   Inf     1
-##  [8,]    2    1    1    1    2    2    3    0    2     1     2   Inf     2
-##  [9,]    4    3    3    3    4    4    5    2    0     1     4   Inf     4
-## [10,]    3    2    2    2    3    3    4    1    1     0     3   Inf     3
-## [11,]    4    1    3    3    4    4    5    2    4     3     0   Inf     4
-## [12,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf     0   Inf
-## [13,]    4    3    3    1    2    2    1    2    4     3     4   Inf     0
-## [14,]    3    4    2    4    3    5    6    3    5     4     5   Inf     5
-## [15,]    2    3    1    3    2    4    5    2    4     3     4   Inf     4
+##  [1,]    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [2,]  Inf    0  Inf    1  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [3,]  Inf  Inf    0  Inf    6    3    5    2    4   Inf     6     1     5
+##  [4,]  Inf    1  Inf    0  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [5,]  Inf  Inf    6  Inf    0    3    1    4    2   Inf     2     5     3
+##  [6,]  Inf  Inf    3  Inf    3    0    2    1    1   Inf     3     2     2
+##  [7,]  Inf  Inf    5  Inf    1    2    0    3    1   Inf     1     4     2
+##  [8,]  Inf  Inf    2  Inf    4    1    3    0    2   Inf     4     1     3
+##  [9,]  Inf  Inf    4  Inf    2    1    1    2    0   Inf     2     3     1
+## [10,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf     0   Inf   Inf   Inf
+## [11,]  Inf  Inf    6  Inf    2    3    1    4    2   Inf     0     5     3
+## [12,]  Inf  Inf    1  Inf    5    2    4    1    3   Inf     5     0     4
+## [13,]  Inf  Inf    5  Inf    3    2    2    3    1   Inf     3     4     0
+## [14,]  Inf  Inf    5  Inf    1    2    1    3    1   Inf     2     4     2
+## [15,]  Inf  Inf    4  Inf    2    1    1    2    2   Inf     2     3     1
 ##       [,14] [,15]
-##  [1,]     3     2
-##  [2,]     4     3
-##  [3,]     2     1
-##  [4,]     4     3
-##  [5,]     3     2
-##  [6,]     5     4
-##  [7,]     6     5
+##  [1,]   Inf   Inf
+##  [2,]   Inf   Inf
+##  [3,]     5     4
+##  [4,]   Inf   Inf
+##  [5,]     1     2
+##  [6,]     2     1
+##  [7,]     1     1
 ##  [8,]     3     2
-##  [9,]     5     4
-## [10,]     4     3
-## [11,]     5     4
-## [12,]   Inf   Inf
-## [13,]     5     4
-## [14,]     0     1
-## [15,]     1     0
+##  [9,]     1     2
+## [10,]   Inf   Inf
+## [11,]     2     2
+## [12,]     4     3
+## [13,]     2     1
+## [14,]     0     2
+## [15,]     2     0
 </code></pre>
 
   </article>
@@ -812,9 +812,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 1.768772e-01 1.000000e+00 5.434427e-01 5.434427e-01 5.244501e-01
-##  [6] 1.768772e-01 6.439035e-02 7.705265e-01 9.129661e-02 2.805023e-01
-## [11] 6.509509e-01 3.727674e-17 1.978347e-01 6.439035e-02 1.978347e-01
+<pre><code>##  [1] 0.00000000 0.00000000 0.01057418 0.00000000 0.47827364 0.44614146
+##  [7] 0.85021875 0.13205186 1.00000000 0.00000000 0.23150192 0.03883495
+## [13] 0.56366266 0.90629896 0.50645656
 </code></pre>
 
   </article>
