Update the slides

--- a/cours3/index.html
+++ b/cours3/index.html
@@ -856,7 +856,7 @@ head(nb_acteurs)
 <li>Nombre de liens par étudiant</li>
 <li>Décompte de liens par paire d&#39;étudiants</li>
 </ul></li>
-<li><p>Enregistrer le résultat des requêtes dans un fichier csv (voir la diapo 34 de ce cours)</p></li>
+<li><p>Enregistrer le résultat des requêtes dans un fichier csv</p></li>
 </ol>
 
   </article>
@@ -878,7 +878,8 @@ head(nb_acteurs)
 <li><p>Écrire un script qui réalise les étapes 1-3 d&#39;un bloc</p></li>
 </ol>
 
-<p>Vous devez remettre les 5 scripts pour chacune de ces étapes ainsi que le script final qui les exécute l&#39;une après l&#39;autre. Assurez vous que le script fonctionne sur la machine virtuelle et entre des utilisateurs différents.</p>
+<p>Vous devez remettre les 5 scripts pour chacune de ces étapes ainsi que le script final qui les exécute l&#39;une après l&#39;autre. 
+Assurez vous que le script fonctionne sur l&#39;ordinateur du laboratoire et également entre des utilisateurs différents.</p>
 
   </article>
   <!-- Presenter Notes -->
