Update the slides

--- a/cours4/index.html
+++ b/cours4/index.html
@@ -190,7 +190,7 @@
     <h1>Qu&#39;est ce que Git?</h1>
   </hgroup>
   <article data-timings="">
-    <p>Il présente l&#39;avantage d&#39;être extrement versatile mais le désavantage de fonctionner seulement avec les fichiers plein texte.</p>
+    <p>Il présente l&#39;avantage d&#39;être extrêmement versatile mais le désavantage de fonctionner seulement avec les fichiers plein texte.</p>
 
 <p><strong>Question</strong>: Qu&#39;est ce qu&#39;un fichier plein texte?</p>
 
