--- a/cours6/index.html
+++ b/cours6/index.html
@@ -190,12 +190,7 @@
 
     </div>
     <div class='right' style='float:right;width:48%'>
-     <div style='text-align:center;margin-top:10px;'>
-  <img src="assets/img/fox.jpg" width="100%"></img>
-</div>
-
-<!-- - Problème: ratio 8/3 -->
-
+     
     </div>
   </article>
 </slide>
@@ -936,7 +931,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 22
+<pre><code>## [1] 24
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1114,7 +1109,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.4183884
+<pre><code>## [1] 0.2769097
 </code></pre>
 
   </article>
@@ -1132,35 +1127,35 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    2    4    2    2    3    4    3     1     2     1     2
-##  [2,]    3    0    1    4    1    3    2    1    3     4     3     2     4
-##  [3,]    2    1    0    4    1    3    2    2    3     3     2     1     4
-##  [4,]    4    4    4    0    3    5    2    5    1     5     5     4     2
-##  [5,]    2    1    1    3    0    2    1    2    2     3     2     1     3
-##  [6,]    2    3    3    5    2    0    3    4    4     1     4     3     4
-##  [7,]    3    2    2    2    1    3    0    3    1     4     3     2     2
-##  [8,]    4    1    2    5    2    4    3    0    4     5     4     3     5
-##  [9,]    3    3    3    1    2    4    1    4    0     4     4     3     1
-## [10,]    1    4    3    5    3    1    4    5    4     0     3     2     3
-## [11,]    2    3    2    5    2    4    3    4    4     3     0     1     4
-## [12,]    1    2    1    4    1    3    2    3    3     2     1     0     3
-## [13,]    2    4    4    2    3    4    2    5    1     3     4     3     0
-## [14,]    1    2    2    4    1    1    2    3    3     2     3     2     3
-## [15,]    1    4    3    3    3    3    3    5    2     2     3     2     1
+##  [1,]    0    2    2    1    2  Inf    3    2    3     1     2     1     2
+##  [2,]    2    0    2    1    3  Inf    4    2    2     2     3     2     2
+##  [3,]    2    2    0    1    1  Inf    4    2    4     1     3     2     3
+##  [4,]    1    1    1    0    2  Inf    4    1    3     1     3     2     2
+##  [5,]    2    3    1    2    0  Inf    3    3    3     2     2     1     3
+##  [6,]  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [7,]    3    4    4    4    3  Inf    0    5    4     4     1     2     4
+##  [8,]    2    2    2    1    3  Inf    5    0    4     2     4     3     3
+##  [9,]    3    2    4    3    3  Inf    4    4    0     4     3     2     2
+## [10,]    1    2    1    1    2  Inf    4    2    4     0     3     2     3
+## [11,]    2    3    3    3    2  Inf    1    4    3     3     0     1     3
+## [12,]    1    2    2    2    1  Inf    2    3    2     2     1     0     2
+## [13,]    2    2    3    2    3  Inf    4    3    2     3     3     2     0
+## [14,]    1    2    2    1    2  Inf    3    2    3     2     2     1     1
+## [15,]    2    1    3    2    2  Inf    3    3    1     3     2     1     1
 ##       [,14] [,15]
-##  [1,]     1     1
-##  [2,]     2     4
+##  [1,]     1     2
+##  [2,]     2     1
 ##  [3,]     2     3
-##  [4,]     4     3
-##  [5,]     1     3
-##  [6,]     1     3
-##  [7,]     2     3
-##  [8,]     3     5
-##  [9,]     3     2
-## [10,]     2     2
-## [11,]     3     3
-## [12,]     2     2
-## [13,]     3     1
+##  [4,]     1     2
+##  [5,]     2     2
+##  [6,]   Inf   Inf
+##  [7,]     3     3
+##  [8,]     2     3
+##  [9,]     3     1
+## [10,]     2     3
+## [11,]     2     2
+## [12,]     1     1
+## [13,]     1     1
 ## [14,]     0     2
 ## [15,]     2     0
 </code></pre>
@@ -1179,9 +1174,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.66684941 0.60662661 0.76964110 0.08895771 1.00000000 0.27736120
-##  [7] 0.37127087 0.18798104 0.19811440 0.29259134 0.39381626 0.87705353
-## [13] 0.17909903 0.60247065 0.37984939
+<pre><code>##  [1] 5.606723e-01 6.218943e-01 3.099812e-01 7.545785e-01 2.515078e-01
+##  [6] 4.996228e-17 4.318335e-02 1.703593e-01 2.257675e-01 3.669246e-01
+## [11] 1.912736e-01 8.040314e-01 3.517167e-01 5.578712e-01 1.000000e+00
 </code></pre>
 
   </article>
