--- a/cours7/index.html
+++ b/cours7/index.html
@@ -54,7 +54,7 @@
     <slide class="" id="slide-1" style="background:;">
   <!--  <a href="#slide-1"></a> -->
   <hgroup>
-    <h1>Séance 6</h1>
+    <h1>Séance 7 &amp; 8</h1>
   </hgroup>
   <article data-timings="">
     <ul>
@@ -1521,8 +1521,12 @@ article \cite{gravel2006a}.
   </hgroup>
   <article data-timings="">
     <ul>
-<li>Respect des consignes (tous les éléments sont inclus - 60%)</li>
-<li>Reproductibilité (30%)</li>
+<li>Respect des consignes (tous les éléments listés précédemment sont inclus - 40%)</li>
+<li>Reproductibilité (50%)
+
+<ul>
+<li>Quelques pistes: Organisation et clareté du code et des données, présence du Makefile etc...</li>
+</ul></li>
 <li>Originalité (10%)</li>
 </ul>
 
@@ -1535,7 +1539,7 @@ article \cite{gravel2006a}.
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Séance 6'>
+        data-slide=1 title='Séance 7 &amp; 8'>
          1
       </a>
     </li>
