Update the slides

--- a/cours7/index.html
+++ b/cours7/index.html
@@ -1413,9 +1413,9 @@ article \cite{gravel2006a}.
 
 <pre><code class="bash">pdflatex monfichier.tex
 </code></pre></li>
-<li><p>Scanner le fichier <code>.tex</code> à la recherche des balises <code>\cite{}</code></p>
+<li><p>Scanner les fichiers à la recherche des balises <code>\cite{}</code></p>
 
-<pre><code class="bash">bibtex monfichier.tex
+<pre><code class="bash">bibtex monfichier
 </code></pre></li>
 <li><p>Compiler le document final en se servant des <code>.aux</code> (étape 1) et <code>.bbl</code> (étape 2)</p>
 
