--- a/cours4/index.html
+++ b/cours4/index.html
@@ -54,7 +54,7 @@
     <slide class="" id="slide-1" style="background:;">
   <!--  <a href="#slide-1"></a> -->
   <hgroup>
-    <h1>Séance 4</h1>
+    <h1>Séance 5</h1>
   </hgroup>
   <article data-timings="">
     <ul>
@@ -190,7 +190,7 @@
     <h1>Qu&#39;est ce que Git?</h1>
   </hgroup>
   <article data-timings="">
-    <p>Il présente l&#39;avantage d&#39;être extrêmement versatile mais le désavantage de fonctionner seulement avec les fichiers plein texte.</p>
+    <p>Il présente l&#39;avantage d&#39;être extrement versatile mais le désavantage de fonctionner seulement avec les fichiers plein texte.</p>
 
 <p><strong>Question</strong>: Qu&#39;est ce qu&#39;un fichier plein texte?</p>
 
@@ -595,7 +595,7 @@ git clone https://github.com/EcoNumUdS/BIO500.git
 <slide class="transition" id="slide-30" style="background:;">
   <!--  <a href="#slide-30"></a> -->
   <hgroup>
-    <h1>Travail pour la semaine</h1>
+    <h1>Le makefile</h1>
   </hgroup>
   <article data-timings="">
     
@@ -604,6 +604,391 @@ git clone https://github.com/EcoNumUdS/BIO500.git
 </slide>
 <slide class="" id="slide-31" style="background:;">
   <!--  <a href="#slide-31"></a> -->
+  <hgroup>
+    <h1>Les étapes du travail d&#39;un biologiste</h1>
+  </hgroup>
+  <article data-timings="">
+    <div style='text-align:center;'>
+<img src="assets/img/flow_full_repro.png"  width="90%"></img>
+</div>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-32" style="background:;">
+  <!--  <a href="#slide-32"></a> -->
+  <hgroup>
+    <h1>Qu&#39;est-ce que le makefile ?</h1>
+  </hgroup>
+  <article data-timings="">
+    <p><strong>Définition</strong>: le makefile est un fichier qui contient un ensemble de directives qui sont exécutées par l&#39;ordinateur. Les instructions et leurs dépendances sont spécifiées dans le makefile.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-33" style="background:;">
+  <!--  <a href="#slide-33"></a> -->
+  <hgroup>
+    <h1>À quoi il sert ?</h1>
+  </hgroup>
+  <article data-timings="">
+    <p>Le makefile est un logiciel permettant d&#39;exécuter une série d&#39;instructions, lorsqu&#39;elles sont nécessaires. Les dépendances sont vérifiées et seulement les instructions qui requierent une mise à jour sont exécutées.</p>
+
+<p>Nous utiliserons le makefile pour assurer la reproductibilité de la démarche entreprise dans le cours. L&#39;ensemble des instructions nécessaires à la production du rapport, de la création de la base de données à la compilation du document écrit, seront contenues dans le makefile.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-34" style="background:;">
+  <!--  <a href="#slide-34"></a> -->
+  <hgroup>
+    <h1>Objectifs de la leçon</h1>
+  </hgroup>
+  <article data-timings="">
+    <ul>
+<li>Reconnaitre les parties importantes d&#39;un makefile, les règles, les cibles, les dépendances et les actions</li>
+<li>Écrire un makefile simple</li>
+<li>Exécuter un makefile à partir du terminal</li>
+<li>Préparer le makefile pour le projet de session</li>
+</ul>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-35" style="background:;">
+  <!--  <a href="#slide-35"></a> -->
+  <hgroup>
+    <h1>Anatomie du makefile</h1>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="bash">&lt;target&gt;: &lt;dependencies...&gt;
+  &lt;commands&gt;
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-36" style="background:;">
+  <!--  <a href="#slide-36"></a> -->
+  <hgroup>
+    <h1><code>target</code></h1>
+  </hgroup>
+  <article data-timings="">
+    <p>La cible est habituellement le nom d&#39;un fichier généré par la commande.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-37" style="background:;">
+  <!--  <a href="#slide-37"></a> -->
+  <hgroup>
+    <h1><code>dependencies...</code></h1>
+  </hgroup>
+  <article data-timings="">
+    <p>Une dépendance (également appelée <em>&quot;prerequesite&quot;</em>) est un fichier qui est utilisé pour créer un autre fichier appelée cible (<code>&quot;target&quot;</code>).</p>
+
+<p>La <em>target</em> peut contenir plusieurs dépendances.</p>
+
+<p>Il est néanmoins possible d&#39;avoir un fichier cible qui ne requiert pas de dépendances.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-38" style="background:;">
+  <!--  <a href="#slide-38"></a> -->
+  <hgroup>
+    <h1><code>commands</code></h1>
+  </hgroup>
+  <article data-timings="">
+    <p>La commande est l&#39;action à réaliser. Dans notre cas, nous utiliserons une commande pour exécuter un script R comme :</p>
+
+<pre><code class="bash">Rscript script.R
+</code></pre>
+
+<p>Nous verrons plus tard dans la session le langage de mise en forme LaTeX. Dans ce cas, la commande serait:</p>
+
+<pre><code class="bash">pdflatex manuscrit.tex
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-39" style="background:;">
+  <!--  <a href="#slide-39"></a> -->
+  <hgroup>
+    <h1>Un exemple</h1>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="bash"># Troisième étape, on produit une figure à partir du modèle
+# et des données
+figure.pdf: model.Rdata data.txt
+  Rscript script3.R
+
+# Seconde étape, on fait un modèle statistique à partir
+# de ces données
+model.Rdata: data.txt
+  Rscript script2.R
+
+# Première étape, on génère des données
+data.txt :
+  Rscript script1.R
+</code></pre>
+
+<p>Ce fichier s&#39;appelle makefile (sans extension) et il est exécuté en inscrivant simplement la commande <code>make nomDeLaCible</code>.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-40" style="background:;">
+  <!--  <a href="#slide-40"></a> -->
+  <hgroup>
+    <h1>Étape par étape</h1>
+  </hgroup>
+  <article data-timings="">
+    <p><code>Rscript</code> est un programme permettant d&#39;exécuter du code R sans passer par la console R. On peut utiliser le terminal pour appeler le programme <code>Rscript</code> et lui donner comme argument un script R: <code>Rscript script1.R</code></p>
+
+<p>Les commandes sont espacées par une <em>tabulation</em> ou 8 espaces. Assurez vous que votre tabulation corresponds bien à 8 espaces.</p>
+
+<p>Ensemble, la cible, les dépendances et les actions constituent une règle. Cet exemple a donc 3 règles.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-41" style="background:;">
+  <!--  <a href="#slide-41"></a> -->
+  <hgroup>
+    <h1>Comment créer un premier makefile</h1>
+  </hgroup>
+  <article data-timings="">
+    <ul>
+<li>Ouvrez un nouveau document au moyen de atom</li>
+<li>Copiez les commandes de l&#39;exemple</li>
+<li>Sauvergardez le fichier, avec pour nom makefile</li>
+<li>Assurez vous de trouvez les 3 scripts dans le dépôt git</li>
+</ul>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-42" style="background:;">
+  <!--  <a href="#slide-42"></a> -->
+  <hgroup>
+    <h1>Script 1</h1>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">  set.seed(1)
+  X &lt;- runif(25, 0, 100)
+  Y &lt;- rnorm(25, mean = X*2 + 10, sd = 25)
+  write.table(cbind(X,Y), file = &quot;data.txt&quot;)
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-43" style="background:;">
+  <!--  <a href="#slide-43"></a> -->
+  <hgroup>
+    <h1>Script 2</h1>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">data &lt;- read.table(&quot;~/Bureau/exemple/data.txt&quot;, header = T)
+model &lt;- lm(data$Y ~ data$X)
+save(model, file = &quot;~/Bureau/exemple/model.Rdata&quot;)
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-44" style="background:;">
+  <!--  <a href="#slide-44"></a> -->
+  <hgroup>
+    <h1>Script 3</h1>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">data &lt;- read.table(&quot;~/Bureau/exemple/data.txt&quot;, header = T)
+load(&quot;~/Bureau/exemple/model.Rdata&quot;)
+
+pdf(&quot;resultat.pdf&quot;, 7 5)
+plot(data$X, data$Y, xlab = &quot;X&quot;, ylab = &quot;Y&quot;)
+abline(model)
+dev.off()
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-45" style="background:;">
+  <!--  <a href="#slide-45"></a> -->
+  <hgroup>
+    <h1>Exécuter un makefile</h1>
+  </hgroup>
+  <article data-timings="">
+    <p>Il n&#39;est pas nécessaire de nommer le makefile <em>makefile</em>. On peut toujours spécifier un autre nom et l&#39;exécuter ainsi :</p>
+
+<pre><code class="bash">make -f MonMakefile
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-46" style="background:;">
+  <!--  <a href="#slide-46"></a> -->
+  <hgroup>
+    <h1>Les dépendances</h1>
+  </hgroup>
+  <article data-timings="">
+    <ul>
+<li>Exécutez le makefile une première fois.</li>
+<li>Ensuite, modifiez une valeur dans le fichier data.txt.</li>
+<li>Exécutez le makefile à nouveau pour voir ce qui se produit.</li>
+</ul>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-47" style="background:;">
+  <!--  <a href="#slide-47"></a> -->
+  <hgroup>
+    <h1>Le makefile comme outil de reproductiblité</h1>
+  </hgroup>
+  <article data-timings="">
+    <p>La rédaction du makefile nous force à spécifier les différentes étapes de notre démarche, à identifier les entrées et les sorties de différentes instructions à l&#39;ordinateur. De cette façon, le makefile permet de documenter rigoureusement la démarche réalisée.</p>
+
+<p>Il s&#39;agit aussi d&#39;un aide-mémoire qui permet de se rappeler des étapes.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-48" style="background:;">
+  <!--  <a href="#slide-48"></a> -->
+  <hgroup>
+    <h1>Exercice</h1>
+  </hgroup>
+  <article data-timings="">
+    <p>Conceptualisez les différentes étapes de la démarche du travail de session jusqu&#39;à présent.</p>
+
+<p>Identifiez les entrées, les sorties et les actions.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-49" style="background:;">
+  <!--  <a href="#slide-49"></a> -->
+  <hgroup>
+    <h1>Les messages de make</h1>
+  </hgroup>
+  <article data-timings="">
+    <p>Il est possible de forcer make à réaliser certaines actions. Par exemple, si on exécute à nouveau make</p>
+
+<pre><code class="bash">make
+</code></pre>
+
+<p>On obtient le message :</p>
+
+<pre><code class="bash">make : &#39;data.txt&#39; is up to date
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-50" style="background:;">
+  <!--  <a href="#slide-50"></a> -->
+  <hgroup>
+    <h1>Les messages de make</h1>
+  </hgroup>
+  <article data-timings="">
+    <p>On peut forcer une étape, par exemple le calcul du modèle, ainsi :</p>
+
+<pre><code class="bash">make model.Rdata
+</code></pre>
+
+<p>Dans ce cas-ci, on obtient le message :</p>
+
+<pre><code class="bash">make: Nothing to be done for &#39;script2.R&#39;
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-51" style="background:;">
+  <!--  <a href="#slide-51"></a> -->
+  <hgroup>
+    <h1>Les messages de make</h1>
+  </hgroup>
+  <article data-timings="">
+    <p><em>up to date</em> signifie que le makefile a une règle dont la cible est le nom du fichier et qu&#39;il est à jour</p>
+
+<p><em>Nothing to be done</em> indique que le fichier existe, mais que soit</p>
+
+<ul>
+<li>il n&#39;y a pas de règle pour ce fichier</li>
+<li>il y a une règle, mais aucune action à réaliser</li>
+</ul>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-52" style="background:;">
+  <!--  <a href="#slide-52"></a> -->
+  <hgroup>
+    <h1>Nettoyage du dépôt en fin de script</h1>
+  </hgroup>
+  <article data-timings="">
+    <p>Il arrive que certains scripts génèrent des fichiers temporaires qui ne doivent pas être conservés inutilement.</p>
+
+<p>Dans l&#39;exemple précédent, on pourrait vouloir éliminer le modèle, qui n&#39;est finalement utilisé que pour réaliser la figure. On peut ainsi inscrire à la fin du makefile :</p>
+
+<pre><code class="bash">clean :
+  rm -f model.Rdata
+</code></pre>
+
+<p><code>rm -f model.Rdata</code> va éliminer à la toute fin l&#39;objet R contenant le modèle intitulé <code>model.Rdata</code>. Notez ici qu&#39;il n&#39;y a pas de dépendance, ce qui indique que cette opération sera systématiquement exécutée.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-53" style="background:;">
+  <!--  <a href="#slide-53"></a> -->
+  <hgroup>
+    <h1>Dépendances</h1>
+  </hgroup>
+  <article data-timings="">
+    <p>L&#39;ordre de présentation des dépendances est arbitraire. Elles ne seront pas nécessairement vérifiées dans l&#39;ordre présenté.</p>
+
+<p>Un truc est de schématiser les dépendances (des noeuds) et les actions (des flèches)</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-54" style="background:;">
+  <!--  <a href="#slide-54"></a> -->
+  <hgroup>
+    <h1>Autres ressources disponibles en ligne :</h1>
+  </hgroup>
+  <article data-timings="">
+    <p><a href="https://swcarpentry.github.io/make-novice/02-makefiles/">https://swcarpentry.github.io/make-novice/02-makefiles/</a></p>
+
+<p><a href="https://gist.github.com/isaacs/62a2d1825d04437c6f08">https://gist.github.com/isaacs/62a2d1825d04437c6f08</a></p>
+
+<p><a href="http://gl.developpez.com/tutoriel/outil/makefile/">http://gl.developpez.com/tutoriel/outil/makefile/</a></p>
+
+<p><a href="http://icps.u-strasbg.fr/people/loechner/public_html/enseignement/GL/make.pdf">http://icps.u-strasbg.fr/people/loechner/public_html/enseignement/GL/make.pdf</a></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="transition" id="slide-55" style="background:;">
+  <!--  <a href="#slide-55"></a> -->
+  <hgroup>
+    <h1>Travail pour la semaine</h1>
+  </hgroup>
+  <article data-timings="">
+    
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-56" style="background:;">
+  <!--  <a href="#slide-56"></a> -->
   <hgroup>
     <h1>Consignes</h1>
   </hgroup>
@@ -617,8 +1002,8 @@ git clone https://github.com/EcoNumUdS/BIO500.git
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-32" style="background:;">
-  <!--  <a href="#slide-32"></a> -->
+<slide class="" id="slide-57" style="background:;">
+  <!--  <a href="#slide-57"></a> -->
   <hgroup>
     <h1>Lectures</h1>
   </hgroup>
@@ -639,7 +1024,7 @@ Research. PLoS Computational Biology. 9: e1003285</p>
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Séance 4'>
+        data-slide=1 title='Séance 5'>
          1
       </a>
     </li>
@@ -813,20 +1198,170 @@ Research. PLoS Computational Biology. 9: e1003285</p>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=30 title='Travail pour la semaine'>
+        data-slide=30 title='Le makefile'>
          30
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=31 title='Consignes'>
+        data-slide=31 title='Les étapes du travail d&#39;un biologiste'>
          31
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=32 title='Lectures'>
+        data-slide=32 title='Qu&#39;est-ce que le makefile ?'>
          32
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=33 title='À quoi il sert ?'>
+         33
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=34 title='Objectifs de la leçon'>
+         34
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=35 title='Anatomie du makefile'>
+         35
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=36 title='<code>target</code>'>
+         36
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=37 title='<code>dependencies...</code>'>
+         37
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=38 title='<code>commands</code>'>
+         38
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=39 title='Un exemple'>
+         39
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=40 title='Étape par étape'>
+         40
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=41 title='Comment créer un premier makefile'>
+         41
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=42 title='Script 1'>
+         42
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=43 title='Script 2'>
+         43
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=44 title='Script 3'>
+         44
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=45 title='Exécuter un makefile'>
+         45
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=46 title='Les dépendances'>
+         46
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=47 title='Le makefile comme outil de reproductiblité'>
+         47
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=48 title='Exercice'>
+         48
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=49 title='Les messages de make'>
+         49
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=50 title='Les messages de make'>
+         50
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=51 title='Les messages de make'>
+         51
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=52 title='Nettoyage du dépôt en fin de script'>
+         52
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=53 title='Dépendances'>
+         53
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=54 title='Autres ressources disponibles en ligne :'>
+         54
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=55 title='Travail pour la semaine'>
+         55
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=56 title='Consignes'>
+         56
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=57 title='Lectures'>
+         57
       </a>
     </li>
   </ul>
